# sift

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.claude/skills/: sift.mdc
.github/workflows/: ci.yml
bench-fixtures/meso-server/: tasks.json  tasks_embed.json
bench-fixtures/meso-server/src/: db.rs  handlers.rs  main.rs  models.rs  router.rs
bench-fixtures/micro-calc/: tasks.json  tasks_embed.json
bench-fixtures/micro-calc/src/: lib.rs  ops.rs  test_utils.rs
benches/: bench.rs  bench_embed.rs  bench_incremental.rs  real-repo.sh
src/: embed.rs  index.rs  lib.rs  main.rs  parser.rs  query.rs
